--- a/ConverterUI/last_settings.json
+++ b/ConverterUI/last_settings.json
@@ -1,1 +1,1 @@
-{"last_settings_file_dir": "/home/ariccegho/mytools/ConverterUI/true_settings copy.json"}
+{"last_settings_file_dir": "C:/GitHub/my_tools/ConverterUI/1.json"}
